fix spacing issues2

--- a/src/index.css
+++ b/src/index.css
@@ -40,12 +40,14 @@ body {
   font-weight: 400;
   /* margin-top: 0; */
   text-align: center;
+  margin-bottom: 0;
 }
 .dice-container {
   display: grid;
   grid-template: auto auto / repeat(5, 1fr);
   gap: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .die-face {
